<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="@drawable/background"
    android:theme="@style/Theme.MaterialComponents"
    tools:context=".ui.ContinueRegistrationFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_second_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0875" />

    <ImageView
        android:id="@+id/imageView_logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextText_username_layout"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        style="@style/EditText_Transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="40"
            android:hint="@string/username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextText_email_layout"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_username_layout"
        style="@style/EditText_Transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword_layout"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/editTextText_email_layout"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_email_layout"
        style="@style/EditText_Transparent_Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextText_confirmPass_layout"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword_layout"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword_layout"
        style="@style/EditText_Transparent_Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText_confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/confirmpassword"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/manrope"
        android:minHeight="48dp"
        android:text="@string/agreeToUsePersonalData"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_confirmPass_layout" />

    <Button
        android:id="@+id/button_register"
        style="@style/ButtonStyle_Gray"
        android:layout_width="0dp"
        android:layout_marginStart="30dp"
        android:layout_height="wrap_content"
        android:text="@string/registeru"
        app:layout_constraintBottom_toBottomOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_back"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        />

    <Button
        android:id="@+id/button_back"
        style="@style/ButtonStyle_Transparent_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_arrow_back"
        android:drawablePadding="10dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_guideline"
        app:layout_constraintVertical_bias="0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>